[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "auto_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.0"
colorama = "^0.4.6"
openai = "^0.27.3"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
readability-lxml = "^0.8.1"
requests = "^2.28.2"
tiktoken = "^0.3.3"
docker = "^6.0.1"
googlesearch-python = "^1.2.2"
google-api-python-client = "^2.83.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
